made accordion full page for injection. deleting unnecessary styling, placed horizontal titles

--- a/index.html
+++ b/index.html
@@ -14,14 +14,13 @@
 <body>
 
   <div class="container">
-  <h1>CSS3 accordion slider</h1>
-  
   <div class="slider-containers">
     
     <!--effect #1 -->
     <div class="slider-container">
       <div class="flexbox-slider flexbox-slider-1">
         <div class="flexbox-slide one">
+          <div class="title-container"><h1 class="slider-title">Header</h1></div>
           <div class="text-block">
             <h3>Slide #1 is here</h3>
             <div class="text">
@@ -30,6 +29,7 @@
           </div>
         </div>
         <div class="flexbox-slide two">
+          <div class="title-container"><h1 class="slider-title">Header</h1></div>
           <div class="text-block">
             <h3>Slide #2 is here</h3>
             <div class="text">
@@ -38,6 +38,7 @@
           </div>
         </div>
         <div class="flexbox-slide three">
+          <div class="title-container"><h1 class="slider-title">Header</h1></div>
           <div class="text-block">
             <h3>Slide #3 is here</h3>
             <div class="text">
