--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>CSS3 accordion slider with Transitions and Flexbox</title>
-  <link href="https://fonts.googleapis.com/css?family=Merienda:400,700|Poppins:400,600,700" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
-  <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css'>
-  <link rel="stylesheet" href="css/style.css">  
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
+  <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
@@ -20,29 +20,35 @@
     <div class="slider-container">
       <div class="flexbox-slider flexbox-slider-1">
         <div class="flexbox-slide one">
-          <div class="title-container"><h1 class="slider-title">Header</h1></div>
-          <div class="text-block">
-            <h3>Slide #1 is here</h3>
-            <div class="text">
-              <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren</p>
+          <h1 class="slider-text slider-title">Header</h1>
+          <div class="inner-slider">
+            <h1 class="slider-text slider-info inner-title">Header</h1>
+            <h2 class="slider-text slider-info subtitle">Regular text<br><span class="bold-description">bold text</span><br>Regular Text</h2>
+            <div class="slider-text slider-info subtitle secondary">
+              <div class="secondary-inner"><p>Place<br>Date</p></div>
+              <div class="secondary-inner"><button class="btn btn-default learn-more-btn">Learn More</button></div>
             </div>
           </div>
         </div>
         <div class="flexbox-slide two">
-          <div class="title-container"><h1 class="slider-title">Header</h1></div>
-          <div class="text-block">
-            <h3>Slide #2 is here</h3>
-            <div class="text">
-              <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren</p>
+          <h1 class="slider-text slider-title">Header</h1>
+          <div class="inner-slider">
+            <h1 class="slider-text slider-info inner-title">Header</h1>
+            <h2 class="slider-text slider-info subtitle primary">Regular text<br><span class="bold-description">bold text</span><br>Regular Text</h2>
+            <div class="slider-text slider-info subtitle secondary">
+              <div class="secondary-inner"><p>Place<br>Date</p></div>
+              <div class="secondary-inner"><button class="btn btn-default learn-more-btn">Learn More</button></div>
             </div>
           </div>
         </div>
         <div class="flexbox-slide three">
-          <div class="title-container"><h1 class="slider-title">Header</h1></div>
-          <div class="text-block">
-            <h3>Slide #3 is here</h3>
-            <div class="text">
-              <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren</p>
+          <h1 class="slider-text slider-title">Header</h1>
+          <div class="inner-slider">
+            <h1 class="slider-text slider-info inner-title">Header</h1>
+            <h2 class="slider-text slider-info subtitle">Regular text<br><span class="bold-description">bold text</span><br>Regular Text</h2>
+            <div class="slider-text slider-info subtitle secondary">
+              <div class="secondary-inner"><p>Place<br>Date</p></div>
+              <div class="secondary-inner"><button class="btn btn-default learn-more-btn">Learn More</button></div>
             </div>
           </div>
         </div>
@@ -53,6 +59,7 @@
   
   
 
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
 </body>
 
 </html>
