added a few comments. deleted unnecessary styling

--- a/index.html
+++ b/index.html
@@ -12,13 +12,12 @@
 </head>
 
 <body>
-
+<!-- Inject this whole container -->
 <div class="container">
-  <div class="slider-containers">
-    
-    <!--effect #1 -->
+  <div class="slider-containers">    
     <div class="slider-container">
-      <div class="flexbox-slider flexbox-slider-1">
+      <div class="flexbox-slider">
+        <!-- slide one -->
         <div class="flexbox-slide one">
           <h1 class="slider-text slider-title">Header</h1>
           <div class="inner-slider">
@@ -30,6 +29,7 @@
             </div>
           </div>
         </div>
+        <!-- slide two -->
         <div class="flexbox-slide two">
           <h1 class="slider-text slider-title">Header</h1>
           <div class="inner-slider">
@@ -41,6 +41,7 @@
             </div>
           </div>
         </div>
+        <!-- slide three -->
         <div class="flexbox-slide three">
           <h1 class="slider-text slider-title">Header</h1>
           <div class="inner-slider">
